logout dialog background overflow fixed

--- a/ADMIN_DASHBOARD/src/Styles/Technicians.module.scss
+++ b/ADMIN_DASHBOARD/src/Styles/Technicians.module.scss
@@ -10,7 +10,6 @@
   box-shadow: 0px 6px 35px -7px rgba(0, 0, 0, 0.1);
   align-items: center;
   align-content: center;
-  overflow: hidden;
 
   .component_container {
     position: relative;
